# erars

./: .gitattributes  .gitignore  Cargo.toml  HTTP.md  LICENSE  README.md  build.rs  deny.toml  dump.txt  emuera.config  flake.nix  inputs.ron  justfile  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  save.ron  shop.ron  sqn.ron  toriko.ron
.cargo/: config
.github/workflows/: check.yml  nightly.yml  release.yml
CSV/: BASE.CSV  CHARA0.CSV  CHARA3.CSV  FLAG.CSV  ITEM.CSV  STR.CSV  TFLAG.CSV  TRAIN.CSV  VariableSize.CSV  _Rename.CSV  _Replace.CSV
ERB/: SYSTEM.ERB  TITLE.ERB
benches/: find_inst.rs  parse.rs  save.rs
crates/erars-ast/: Cargo.toml
crates/erars-ast/src/: alignment.rs  ast.rs  command.rs  event.rs  lib.rs  operator.rs  value.rs  variable.rs
crates/erars-bytecode/: Cargo.toml
crates/erars-bytecode/src/: lib.rs
crates/erars-capi/: Cargo.toml
crates/erars-capi/src/: lib.rs
crates/erars-compiler/: Cargo.toml  build.rs  endif.fwd.dfa  endif.rev.dfa  inst.dfa  inst_re.dfa  sharp_re.dfa  skipend.fwd.dfa  skipend.rev.dfa  square.fwd.dfa  square.rev.dfa
crates/erars-compiler/src/: compiler.rs  error.rs  instruction.rs  lib.rs  parser.rs
crates/erars-compiler/src/parser/: csv.rs  expr.rs
crates/erars-egui/: Cargo.toml
crates/erars-egui/src/: main.rs
crates/erars-http/: Cargo.toml
crates/erars-http/src/: http_frontend.rs  main.rs
crates/erars-iced/: Cargo.toml
crates/erars-iced/src/: main.rs
crates/erars-lexer/: Cargo.toml
crates/erars-lexer/src/: erb.rs  inst.rs  lib.rs  sharp.rs  square.rs  utils.rs
crates/erars-lint/: Cargo.toml
crates/erars-lint/src/: lib.rs
crates/erars-loader/: Cargo.toml
crates/erars-loader/src/: lib.rs  variable.yaml
crates/erars-proxy-system/: Cargo.toml
crates/erars-proxy-system/src/: lib.rs
crates/erars-reader/: Cargo.toml
crates/erars-reader/src/: lib.rs
crates/erars-saveload-fs/: Cargo.toml
crates/erars-saveload-fs/src/: lib.rs  save_data.rs
crates/erars-saveload-web/: Cargo.toml
crates/erars-saveload-web/src/: indexed_db.rs  lib.rs  local_storage.rs
crates/erars-stdio/: Cargo.toml
crates/erars-stdio/src/: json_frontend.rs  main.rs  stdio_frontend.rs
crates/erars-ui/: Cargo.toml  build.rs  ui.fbs
crates/erars-ui/src/: console.rs  lib.rs
crates/erars-vm/: Cargo.toml
crates/erars-vm/src/: check_pass.rs  context.rs  function.rs  lib.rs  proxy.rs  proxy_msg.fbs  proxy_msg_generated.rs  py_module.rs  rune_module.rs  save.rs  save_data.rs  system_func.rs  terminal_vm.rs  variable.rs
crates/erars-vm/src/terminal_vm/: executor.rs
crates/erars-wasm/: Cargo.toml
crates/erars-wasm/src/: lib.rs
erars-ast/: Cargo.toml
erars-ast/src/: ast.rs  command.rs  event.rs  lib.rs  operator.rs  value.rs  variable.rs
erars-compiler/: Cargo.toml  build.rs
erars-compiler/src/: ast.rs  command.rs  compiler.rs  error.rs  event.rs  function.rs  grammar.lalrpop  instruction.rs  lexer.rs  lib.rs  location.rs  operator.rs  parser.rs  token.rs  value.rs  variable.rs
erars-compiler/src/parser/: csv.rs  expr.rs
erars-compiler/tests/: parser.rs  parser_test.rs
erars-compiler/tests/parse_tests/: hello.erb  var_arg.erb  var_empty.erb
erars-lexer/: Cargo.toml
erars-lexer/src/: lib.rs
erars_py/: erars.py  foo.py  main.py  title.py
examples/: gen_parse_tests.rs
js-example/: README.md  package-lock.json  package.json  webpack.config.js
js-example/www/: index.js
rune/: foo.rn  main.rn
scripts/: gen_empty_test.sh
src/: compiler.rs  erb.pest  erb_button.pest  function.rs  instruction.rs  lib.rs  main.rs  operator.rs  ui.rs  value.rs  variable.yaml  vm.rs
src/compiler/: parser.rs
src/ui/: button_parser.rs  http_backend.rs  stdio_backend.rs
src/vm/: context.rs  save_data.rs  variable.rs
static/: index.html  index.js
tests/: basic.rs  compiler_test.rs  erh.rs  gen_parse_test.sh  helloworld.rs  lexer_test.rs  parser_test.rs  run_tests.rs  test_util.rs
tests/compile_tests/: form.erb  form.ron  hello.erb  hello.ron
tests/erh_tests/: tw.erh
tests/parse_tests/: plus.erb  plus_mul.erb  plus_mul_paran.erb  print_simple.erb
tests/parse_tests/bodys/: alignment.erb  alignment.ron  assign.erb  assign.ron  assign_add.erb  assign_add.ron  assign_str.erb  assign_str.ron  call.erb  call.ron  command.erb  comment.erb  empty_arg.erb  for.erb  hello.erb  hello.ron  if.erb  if.ron  if_empty_cond.erb  multiline.erb  number.erb  print_data.erb  print_simple.erb  print_simple.ron  printc.erb  repeat.erb  selectcase.erb  sif.erb  sif.ron  skip.erb  sortchara.erb  times.erb  trailing_comma.erb
tests/parse_tests/exprs/: boolean.erb  boolean.ron  complex_op.erb  cond.erb  cond.ron  csv.erb  inc_expr.erb  method.erb  method.ron  plus.ron  plus_mul.ron  plus_mul_paran.ron  rename.erb  str_literal.erb  str_literal.ron  trailing_comma.erb  unicode_var.erb  var_arg.erb  var_arg.ron  var_complex.erb  var_complex.ron  var_empty.erb  var_empty.ron
tests/parse_tests/functions/: call.erb  function.erb  function.ron  juel.erb  print_button.erb  weird_ident.erb
tests/parse_tests/programs/: call_form.erb  method_call.erb  simple.erb  simple.ron
tests/run_tests/: builtin_methods.erb  builtin_methods.ron  call_form.ron  chara_csv.erb  chara_csv.ron  dim.ron  do.ron  extern_local.erb  extern_local.ron  flag_name.ron  for.ron  get_chara.erb  global.ron  inc_op.erb  inc_op.ron  method.erb  price.ron  repeat.erb  selectcase.erb  selectcase.ron  short_circuit.erb  sif.ron  simple.ron  str_mul.ron  times.erb  train.ron  try_call.erb  try_call.ron
tests/run_tests/basic/: arrarremove.erb  arraycommands.erb  arraycommands.out  bar.erb  bar.out  bar.ron  builtin_methods.erb  builtin_methods.out  builtin_methods.ron  call_form.erb  call_form.out  callf.erb  caseless.erb  chara_csv.erb  chara_csv.out  dim.erb  do.erb  dynamic.erb  empty_arg.erb  empty_arg.out  extern_local.ron  flag_name.erb  flag_name.out  for.erb  get_chara.out  get_chara.ron  getnum.erb  global.erb  hello.erb  hello.out  hello.ron  ignore_nonnumber.erb  inc_op.erb  inc_op.out  invalid_value_chara.erb  jump.erb  jump.out  (+41 more)
(+22 files in other folders)
