[package]
name = "erars"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[workspace]
members = [
    "./crates/erars-ast",
    "./crates/erars-bytecode",
    "./crates/erars-compiler",
    "./crates/erars-lexer",
    "./crates/erars-http",
    "./crates/erars-loader",
    "./crates/erars-stdio",
    "./crates/erars-ui",
    "./crates/erars-vm",
]

[dev-dependencies]
erars-ast = { path = "./crates/erars-ast" }
erars-compiler = { path = "./crates/erars-compiler" }
erars-ui = { path = "./crates/erars-ui" }
erars-vm = { path = "./crates/erars-vm" }

codespan = "0.11.1"
codespan-reporting = "0.11.1"
criterion = "0.4.0"
k9 = "0.11.1"
glob = "0.3.0"
flexi_logger = "0.24.0"
log-panics = "2.1.0"
ron = "0.8.0"
serde = "1.0.145"
log = "0.4.17"
serde_yaml = "0.9.13"
smol_str = "0.1.23"

[profile.release-lto]
inherits = "release"
lto = true

[[bench]]
name = "parse"
harness = false
