[package]
name = "erars-ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
enum-map = { version = "2.4.1", features = ["serde"] }
hashbrown = { version = "0.12.3", features = ["ahash", "serde"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
option_set = "0.1.4"
ordered-float = { version = "3.0.0", features = ["serde"] }
serde = { version = "1.0.142", features = ["derive"] }
smol_str = { version = "0.1.23", features = ["serde"] }
strum = { version = "0.24.1", features = ["derive"] }
anyhow = { version = "1" }

[dev-dependencies]
k9 = "0.11.1"

