[package]
name = "erars-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3.2"
either = { version = "1.6.1", features = ["serde"] }
enum-map = { version = "2.1.0", features = ["serde"] }
hashbrown = { version = "0.12.0", features = ["serde"] }
lasso = { version = "0.6.0", features = ["ahasher", "multi-threaded", "serialize"] }
memchr = "2.4.1"
nom = "7.1.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
option_set = "0.1.4"
ordered-float = { version = "2.10.0", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
smartstring = { version = "1.0.1", features = ["serde"] }
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"
unicode-xid = "0.2.2"
utf8-decode = "1.0.1"

[dev-dependencies]
k9 = "0.11.1"

[features]
