[package]
name = "erars-lexer"
version = "0.1.0"
edition = "2021"

[dependencies]
erars-ast = { path = "../erars-ast" }
arrayvec = "0.7.2"
bitflags = "1.3.2"
cow-utils = "0.1.2"
hashbrown = { version = "0.12.0", features = ["serde"] }
logos = { version = "0.12.0", features = ["logos-derive"] }
option_set = "0.1.4"
serde = { version = "1.0.136", features = ["derive"] }
smol_str = { version = "0.1.23", features = ["serde"] }
strum = { version = "0.24.0", features = ["derive"] }
