[package]
name = "erars-compiler"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
erars-ast = { path = "../erars-ast" }
erars-lexer = { path = "../erars-lexer" }
bitflags = "1.3.2"
enum-map = { version = "2.1.0", features = ["serde"] }
hashbrown = { version = "0.12.0", features = ["serde"] }
memchr = "2.4.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
option_set = "0.1.4"
serde = { version = "1.0.136", features = ["derive"] }
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"
utf8-decode = "1.0.1"
nom = "7.1.1"
logos = "0.12.1"
unicode-xid = "0.2.3"
smol_str = { version = "0.1.23", features = ["serde"] }
log = "0.4.17"
derivative = "2.2.0"

[dev-dependencies]
k9 = "0.11.1"

[features]
