[package]
name = "erars-compiler"
version = "0.5.0"
edition = "2021"
license = "GPL-3.0-or-later"

[build-dependencies]
erars-lexer = { path = "../erars-lexer" }
regex-automata = "0.2.0"

[dependencies]
erars-ast = { path = "../erars-ast" }
erars-lexer = { path = "../erars-lexer" }
bitflags = "2.3.1"
pad = "0.1"
anyhow = "1"
enum-map = { version = "2.1.0", features = ["serde"] }
hashbrown = { version = "0.13", features = ["serde"] }
memchr = "2.4.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
option_set = "0.1.4"
serde = { version = "1.0.136", features = ["derive"] }
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"
utf8-decode = "1.0.1"
nom = "7.1.1"
logos = "0.13.0"
unicode-xid = "0.2.3"
log = "0.4.17"
derivative = "2.2.0"
static_assertions = "1.1.0"
paste = "1.0.9"
itertools = "0.10.5"
once_cell = { version = "1.16.0", features = ["parking_lot"] }
include_bytes_aligned = "0.1.2"
cow-utils = "0.1.2"

[dev-dependencies]
k9 = "0.11.1"

[features]
