[package]
name = "erars-egui"
version = "0.5.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
erars-ast = { path = "../erars-ast" }
erars-compiler = { path = "../erars-compiler" }
erars-ui = { path = "../erars-ui" }
erars-vm = { path = "../erars-vm" }
erars-loader = { path = "../erars-loader", features = ["multithread"] }
erars-saveload-fs = { path = "../erars-saveload-fs", features = ["multithread"] }
erars-proxy-system = { path = "../erars-proxy-system" }

egui = "0.20.1"
eframe = { version = "0.20.1", default-features = false, features = ["wgpu"] }
fontdb = { version = "0.10.0", features = ["fontconfig"] }
clap = { version = "4", features = ["derive"] }
flexi_logger = "0.24.0"
log-panics = "2.1.0"
log = "0.4.17"
mimalloc = { version = "0.1.31", default-features = false }
pollster = "0.2.5"
async-trait = "0.1.58"
