[package]
name = "erars-http"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
erars-ast = { path = "../erars-ast" }
erars-compiler = { path = "../erars-compiler" }
erars-ui = { path = "../erars-ui" }
erars-vm = { path = "../erars-vm" }
erars-loader = { path = "../erars-loader" }

tokio = { version = "1.21.1", features = ["bytes", "rt", "net", "time", "sync", "rt-multi-thread", "parking_lot"] }
axum = { version = "0.5.16", features = ["ws"] }
tower-http = { version = "0.3.4", features = ["compression-full", "cors"] }

clap = { version = "4", features = ["derive"] }
log-panics = "2.1.0"
flexi_logger = "0.24.0"
ron = "0.8.0"
anyhow = "1.0.65"
log = "0.4.17"
parking_lot = "0.12.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
slab = "0.4.7"
