[package]
name = "erars-lexer"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
erars-ast = { path = "../erars-ast" }
bitflags = "1.3.2"
cow-utils = "0.1.2"
hashbrown = { version = "0.12.0", features = ["serde"] }
logos = { version = "0.12.1", features = ["logos-derive"] }
option_set = "0.1.4"
serde = { version = "1.0.136", features = ["derive"] }
smol_str = { version = "0.1.23", features = ["serde"] }
strum = { version = "0.24.0", features = ["derive"] }
