[package]
name = "erars-lexer"
version = "0.5.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
erars-ast = { path = "../erars-ast" }
bitflags = "2.3.1"
cow-utils = "0.1.2"
hashbrown = { version = "0.13.1", features = ["serde"] }
logos = { version = "0.13.0", features = ["logos-derive"] }
option_set = "0.1.4"
serde = { version = "1.0.136", features = ["derive"] }
smol_str = { version = "0.2.0", features = ["serde"] }
strum = { version = "0.24.0", features = ["derive"] }
memchr = "2.5.0"
regex-automata = "0.2.0"
num-traits = "0.2.15"
num-derive = "0.3.3"
bumpalo = "3.11.1"
log = "0.4.17"
