[package]
name = "erars-lint"
version = "0.5.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
erars-ast = { path = "../erars-ast" }
erars-compiler = { path = "../erars-compiler" }
erars-reader = { path = "../erars-reader" }
erars-vm = { path = "../erars-vm" }

codespan-reporting = "0.11.1"
rayon = { version = "1.5.3", optional = true }
hashbrown = { version = "0.13", features = ["ahash", "serde"] }
parking_lot = "0.12.1"
log = "0.4.17"

[features]
multithread = ["rayon", "hashbrown/rayon", "erars-vm/multithread"]
