[package]
name = "erars-loader"
version = "0.5.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
erars-ast = { path = "../erars-ast" }
erars-bytecode = { path = "../erars-bytecode" }
erars-compiler = { path = "../erars-compiler" }
erars-lint = { path = "../erars-lint" }
erars-reader = { path = "../erars-reader" }
erars-ui = { path = "../erars-ui" }
erars-vm = { path = "../erars-vm" }

rayon = { version = "1.5.3", optional = true }
anyhow = "1.0.52"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
serde_yaml = "0.9.13"
hashbrown = { version = "0.13", features = ["ahash", "serde"] }
log = "0.4.17"
glob = "0.3.0"
parking_lot = "0.12.1"
rmp-serde = "1.1.1"
memmap2 = "0.5.7"

[features]
multithread = [
    "rayon",
    "hashbrown/rayon",
    "erars-vm/multithread",
    "erars-lint/multithread",
]
