[package]
name = "erars-saveload-fs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
erars-vm = { path = "../erars-vm" }
flate2 = "1.0.24"
log = "0.4.17"
rmp-serde = "1.1.1"
rayon = { version = "1.5.3", optional = true }
anyhow = "1.0.65"

[features]
multithread = ["erars-vm/multithread", "rayon"]
