[package]
name = "erars-stdio"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
erars-ast = { path = "../erars-ast" }
erars-compiler = { path = "../erars-compiler" }
erars-ui = { path = "../erars-ui" }
erars-vm = { path = "../erars-vm" }
erars-loader = { path = "../erars-loader" }
erars-bytecode = { path = "../erars-bytecode" }

clap = { version = "4", features = ["derive"] }
log-panics = "2.1.0"
flexi_logger = "0.24.0"
ron = "0.8.0"
anyhow = "1.0.65"
log = "0.4.17"
ansi_term = "0.12.1"
rmp-serde = "1.1.1"
bincode = "1.3.3"

[features]
with-backtrace = ["log-panics/with-backtrace"]
