[package]
name = "erars-stdio"
version = "0.5.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
erars-ast = { path = "../erars-ast" }
erars-compiler = { path = "../erars-compiler" }
erars-ui = { path = "../erars-ui" }
erars-vm = { path = "../erars-vm" }
erars-loader = { path = "../erars-loader", features = ["multithread"] }

clap = { version = "4", features = ["derive"] }
log-panics = "2.1.0"
flexi_logger = "0.25.1"
ron = "0.8.0"
anyhow = "1.0.65"
log = "0.4.17"
ansi_term = "0.12.1"
serde_json = "1.0.86"
serde = { version = "1.0.145", features = ["derive"] }
memory-stats = "1.0.0"
mimalloc = { version = "0.1.31", default-features = false }
pollster = "0.2.5"

[features]
with-backtrace = ["log-panics/with-backtrace"]
