[package]
name = "erars-ui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
erars-ast = { path = "../erars-ast" }

parking_lot = "0.12.1"
once_cell = "1.15.0"
regex = "1.6.0"
pad = "0.1.6"
smol_str = "0.1.23"
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
time = "0.3.15"
bitflags = "1.3.2"
anyhow = "1.0.65"
crossbeam-channel = "0.5.6"

[dev-dependencies]
k9 = "0.11.5"
