[package]
name = "erars-vm"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
erars-ast = { path = "../erars-ast" }
erars-compiler = { path = "../erars-compiler" }
erars-ui = { path = "../erars-ui" }

anyhow = "1.0.52"
bitflags = "1.3.2"
enum-map = { version = "2.0.0", features = ["serde"] }
glob = "0.3.0"
hashbrown = { version = "0.12", features = ["serde", "rayon"] }
itertools = "0.10.3"
log = "0.4.14"
serde = { version = "1.0.132", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
rayon = "1.5.3"
parking_lot = "0.12.1"
unicode-width = "0.1.9"
encoding_rs = "0.8.31"
pad = "0.1.6"
ron = "0.8.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
time = { version = "0.3.14", features = ["local-offset", "serde"] }
rmp-serde = "1.1.0"
flate2 = "1.0.24"
serde_json = "1.0.85"
css-color = "0.2.4"
regex = "1.6.0"
twoway = "0.2.2"
derivative = "2.2.0"
bincode = "1.3.3"
tinyvec = "1.6.0"

[dev-dependencies]
k9 = "0.11.5"

[features]
