[package]
name = "erars-vm"
version = "0.5.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
erars-ast = { path = "../erars-ast" }
erars-compiler = { path = "../erars-compiler" }
erars-ui = { path = "../erars-ui" }

anyhow = "1.0.52"
bitflags = "1.3.2"
enum-map = { version = "2.0.0", features = ["serde"] }
hashbrown = { version = "0.13", features = ["serde"] }
itertools = "0.10.3"
log = "0.4.14"
serde = { version = "1.0.132", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
rayon = { version = "1.5.3", optional = true }
unicode-width = "0.1.9"
encoding_rs = "0.8.31"
pad = "0.1.6"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
rand_chacha = { version = "0.3.1", default-features = false }
time = { version = "0.3.14", features = ["local-offset", "serde"] }
css-color = "0.2.4"
regex = "1.6.0"
twoway = "0.2.2"
derivative = "2.2.0"
tinyvec = "1.6.0"
static_assertions = "1.1.0"
unicode_hfwidth = "0.2.0"
rmp-serde = "1.1.1"
flate2 = "1.0.25"
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
bytemuck = "1.13.0"

[dev-dependencies]
k9 = "0.11.5"

[target.'wasm32-unknown-unknown'.dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
time = { version = "0.3.14", features = ["wasm-bindgen"] }

[features]
multithread = ["rayon", "hashbrown/rayon"]
