[package]
name = "erars-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
erars-ast = { path = "../erars-ast" }
erars-compiler = { path = "../erars-compiler" }
erars-ui = { path = "../erars-ui" }
erars-vm = { path = "../erars-vm" }
erars-loader = { path = "../erars-loader" }
serde_json = "1.0.86"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
