[package]
name = "erars-wasm"
version = "0.3.4"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
erars-ast = { path = "../erars-ast" }
erars-bytecode = { path = "../erars-bytecode" }
erars-compiler = { path = "../erars-compiler" }
erars-ui = { path = "../erars-ui" }
erars-vm = { path = "../erars-vm" }
serde_json = "1.0.86"
wasm-bindgen = "0.2.83"
rmp-serde = "1.1.1"
log = "0.4.17"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
wasm-logger = "0.2.0"
serde = { version = "1.0.145", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
async-trait = "0.1.57"
anyhow = "1.0.65"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
